# nr-infotainment-core

./: .gitignore  .gitmodules  CMakeLists.txt  Car_infotainment.qmlproject  Car_infotainment.qmlproject.qtds  Cari.files  README.md  nightride-infotainment.qmlproject  pure-maps.md  requirements  resources.qrc
.github/workflows/: build.yml
Car_infotainment/: Constants.qml  qmldir
Car_infotainment/designer/: plugin.metainfo
Car_infotainmentContent/: App.qml  Databasetest.qml  InternetRadio.qml  Main.qml  Main.qml.txt  Screen01.ui.qml  Taskbar.qml  Taskbar.qml.txt
NightRideContent/: AppMenuGridView.qml  Climate.qml  InternetRadio.qml  Main.qml  Settings.qml  Taskbar.qml  qmldir
shaders/: ghosting.frag
src/: DatabaseManager.cpp  DatabaseManager.h  ProgramModel.cpp  ProgramModel.h  applauncher.cpp  applauncher.h  internet_radio.cpp  internet_radio.h  main.cpp  vlcplayer.cpp  vlcplayer.h
src/sdr/: rtlsdr.cpp  rtlsdr.h
